src/kubernetes/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: scdf.grafana.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
